<resources>

    <!-- Buttons -->
    <string name="kanbanery">Kanbanery @ Google TV</string>
    <string name="wowzers">Wowzers!</string>
    <string name="logo">logo</string>
    <string name="app_name">Kanbanery Tv</string>

    <!-- menus -->
    <string name="settings">Settings</string>

    <!-- shared preferences keys -->
    <string name="preference_key_phone_number">phone_number</string>
    <string name="preference_key_last_synced_date">last_synced_sms_date</string>

    <!-- UI -->
    <string name="password">Password:</string>
    <string name="email">Email:</string>
    <string name="the_password_will_not_be_stored_on_the_device">Your password will not be stored on the device, we use it only once - to obtain a secure API Token.</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Login</string>
    <string name="click_me">Click me!</string>
    <string name="done">Done!</string>
    <string name="dont_have_an_account_yet_register">Don\'t have an account yet? Register for free at kanbanery.com</string>
    <string name="kanbanery_logo">kanbanery logo</string>
    <string name="project">Project:</string>
    <string name="loading_column">Loading column…</string>
    <string name="logo_description">Kanbananery logo</string>
    <string name="task_type">Task type</string>
    <string name="task_name">Task name</string>
    <string name="task_owner">Task owner</string>
    <string name="you_have_no_workspace_why_not_create_one_now">You have no workspaces, please create one.</string>
    <string name="empty">Empty</string>
    <string name="this_board_has_no_columns">This board has no columns… Weird!</string>
    <string name="deadline">Deadline:</string>
    <string name="task_title">New Text</string>
    <string name="owner_image">Owner Image</string>
    <string name="task_id">Task ID</string>
    <string name="task_information">Task Information</string>
    <string name="loading">Loading…</string>
    <string name="new_comment">New Comment</string>
    <string name="created_by">Created By</string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet,
        consectetur adipiscing elit.
    </string>

    <!-- actions -->
    <string name="logout">Logout</string>
    <string name="move_left">To left column</string>
    <string name="move_to_selected">To selected column</string>
    <string name="move_right">To right column</string>
    <string name="send_comment">Add</string>
    <string name="zero_comments">Comments (0)</string>
    <string name="subtasks_zero">Subtasks (0)</string>
    <string name="new_subtask">New subtask</string>
    <string name="add_subtask">Add</string>

    <string name="cannot_post_empty_comment">Can\'t add an empty comment!</string>
    <string name="cannot_post_empty_subtask">Can\'t add an empty subtask!</string>
    <string name="posting_comment">Adding comment…</string>
    <string name="posting_subtask">Adding subtask…</string>

    <string name="should_we_delete_subtask">Delete this subtask?</string>
    <string name="should_we_delete_comment">Delete this comment?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>
